# standard-cpp-server

./: .gitignore  CMakeLists.txt  README.md
src/: cookies.cpp  cookies.h  crypto.cpp  crypto.h  headers.cpp  headers.h  main.cpp  request.cpp  request.h  server.cpp  server.h  utils.cpp  utils.h
